text not showing fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
   align-items: center;
   height: max-content;
   justify-self: center;
-  font-size: 2rem;
+  font-size: 1.6rem;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
